--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: html5
 description: Render HTML source as native flutter widgets
 version: 0.0.1
-homepage:
+homepage: https://github.com/rey-xi/html5
+repository: https://github.com/rey-xi/html5
 
 environment:
   sdk: '>=2.19.1 <3.0.0'
@@ -13,7 +14,7 @@ dependencies:
 
   html: ^0.15.1
   csslib: ^0.17.2
-  qp_xt: ^0.0.1+6
+  qp_xt: ^0.0.1+7
 
   list_counter: ^1.0.2
 
