--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: html5
+name: rhtml5
 description: Render HTML source as native flutter widgets
 version: 0.0.1
 homepage: https://github.com/rey-xi/html5
@@ -22,5 +22,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.1
+  change_app_package_name: ^1.1.0
 
 flutter:
